# cellpose-napari

./: .travis.yml  LICENSE  MANIFEST.in  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini  travis.yml
.github/workflows/: .test_and_deploy.yml  test_and_deploy.yml
.napari/: config.yml
cell_counting/models/: intensity_regression.ipynb
cellpose_napari/: __init__.py  _dock_widget.py  _label_painter.py  _sample_data.py  napari.yaml  utils.py
cellpose_napari/_tests/: test_dock_widget.py  test_function.py  test_reader.py
cellpose_napari/widgets/: counting_widget.py  segmentation_widget.py
docs/: conf.py  index.rst  inputs.rst  installation.rst  running.rst  settings.rst
microscope_napari/: __init__.py  napari.yaml
microscope_napari/widgets/: counting_widget.py  segmentation_widget.py
models/cell_counting/: cellpose_model.ipynb  intensity_regression.ipynb
tests/: test_plugin.py
