[metadata]
name = cellpose-napari
author = Carsen Stringer
author_email = stringerc@janelia.hhmi.org
license = BSD-3
description = a generalist algorithm for anatomical segmentation
url = https://github.com/Mouseland/cellpose-napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Framework :: napari

[options]
packages = find:
install_requires =
    napari
    napari-plugin-engine>=0.1.4
    cellpose>0.6.3
    imagecodecs
include_package_data = True
python_requires = >=3.6

[options.entry_points]
napari.plugin = 
    cellpose-napari = cellpose_napari

[options.extras_require]
docs =
    sphinx>=3.0
    sphinxcontrib-apidoc
    sphinx_rtd_theme
    sphinx-prompt
    sphinx-autodoc-typehints
tests_require = 
    pytest
    pytest-qt
    
[aliases]
test=pytest
