[metadata]
name = microscope-napari
author = Nanobiosensorics
author_email = horvath.robert@energia.mta.hu
license = BSD-3
description = Nanobiosensorics microscopic napari plugin.
url = https://github.com/Nanobiosensorics/microscope-napari
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	License :: OSI Approved :: BSD License
	Framework :: napari

[options]
packages = find:
install_requires = 
	napari
	napari-plugin-engine>=0.1.4
	cellpose>0.6.3
	imagecodecs
include_package_data = True
python_requires = >=3.7

[options.entry_points]
napari.manifest = 
	microscope-napari = microscope_napari:napari.yaml

[options.extras_require]
docs = 
	sphinx>=3.0
	sphinxcontrib-apidoc
	sphinx_rtd_theme
	sphinx-prompt
	sphinx-autodoc-typehints
testing = 
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5

[aliases]
test = pytest

[options.package_data]
microscope_napari = napari.yaml

[options.packages.find]
exclude =
    tests
    tests.*

